Create RN3DView as wrapper to GLView. Support background color android. Support require local assets